Profanity depends on libcurl

--- a/ports/net-im/profanity/Makefile
+++ b/ports/net-im/profanity/Makefile
@@ -13,7 +13,8 @@ LICENSE=       GPLv3
 
 BUILD_DEPENDS= pkgconf:${PORTSDIR}/devel/pkgconf
 LIB_DEPENDS=   libstrophe.so:${PORTSDIR}/net-im/libstrophe \
-               libglib-2.0.so.0:${PORTSDIR}/devel/glib20
+               libglib-2.0.so.0:${PORTSDIR}/devel/glib20 \
+               libcurl.so.4:${PORTSDIR}/ftp/curl
 
 USE_GITHUB=    yes
 GH_ACCOUNT=    boothj5
